@@ -212,7 +212,6 @@ importFrom(stats,rstandard)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
-importFrom(stats,sigma)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,var)
